<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <TextView
        android:id="@+id/about_us_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_heading"
        android:textSize="30dp"
        android:gravity="center"
        android:fontFamily="@font/poacifico"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_us_heading"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/artist_picture1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dingsiyao"/>

                <TextView
                    android:id="@+id/artist_name1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name_ding_siyao"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/artist_info1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_info_ding_siyao"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginBottom="50dp">
                <ImageView
                    android:id="@+id/artist_picture2"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:src="@drawable/songlili"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"/>

                <TextView
                    android:id="@+id/artist_name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name_song_lili"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/artist_info2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_info_song_lili"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>