<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CoverActivity"
    android:background="@android:color/black"
    >

    <!-- Title Bar -->
    <TextView
        android:id="@+id/cover_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cover_welcome"
        android:textColor="@color/gold"
        android:textAlignment="center"
        android:textSize="@dimen/cover_title"
        android:textStyle="italic"
        android:fontFamily="@font/poacifico"
        />

    <ScrollView
        android:id="@+id/cover_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!-- android:layout_below="@id/cover_title">  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cover_subHeading"
                android:textColor="@color/white"
                android:text="@string/cover_intro"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/image_view_animation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <Button
                android:id="@+id/cover_button_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/about_us_button"
                android:textColor="@android:color/white"
                android:layout_marginTop="500dp"
                android:layout_below="@id/cover_subHeading"
                android:background="@color/black"
                android:onClick="launchAboutUsActivity"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_to_main"
                android:onClick="launchChooseActivity"
                android:background="@color/black"
                android:layout_below="@id/cover_subHeading"
                android:textColor="@color/white"
                android:text="Explore"
                android:layout_marginTop="500dp"
                android:layout_centerInParent="true"/>
            <Button
                android:id="@+id/cover_button_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/contact_us_button"
                android:textColor="@android:color/white"
                android:layout_marginTop="500dp"
                android:layout_below="@id/cover_subHeading"
                android:background="@color/black"
                android:onClick="launchContactUsActivity"/>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/switch_label_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/chinese_switch_label"
            android:textSize="20dp"/>

        <Switch
            android:id="@+id/language_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/switch_label_chinese"
            android:gravity="center"
            android:onClick="changeLang"/>


        <TextView
            android:id="@+id/switch_label_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/language_switch"
            android:gravity="right"
            android:text="@string/switch_label_english"
            android:textSize="20dp"/>
    </RelativeLayout>
</LinearLayout>